# ci-cd-metrics-experiment

./: .gitignore  README.md  pyproject.toml  requirements-analysis.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: metrics.csv  metrics.json  runs.csv  steps.csv
entregáveis/: README.md
entregáveis/scripts/: run_experiment.py  visualize.py
entregáveis/workflow/: ci.yml
experiment/: flags.env
report/: RELATORIO.md
scripts/: collect_metrics.py  gen_tests.py
src/calc/: __init__.py  core.py
tests/: test_core.py  test_generated.py
